# resume-llm

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  resume_example.json
src/: generate.py
src/_core/: __init__.py  logging.py  pipe.py
src/llm_handlers/: __init__.py  gemini_handler.py
src/resume/: schema.py  template.md  utils.py
